# E0256-Project-Final

./: .gitignore  CMakeLists.txt  README.md
GraphLib/: CMakeLists.txt  GraphLib.cpp
GraphLib/includes/: GraphLib.hpp
LLVM/: CMakeLists.txt  LibcCallGraphDebug.h  LibcCallGraphGen.cpp  LibcCallGraphUtils.h
LibcListGen/: CMakeLists.txt  LibcFuncDump.cpp
busybox/: 0001-E0256-Necessary-integrations.patch  init-noshell.ref  init.ref  package_initramfs.sh  shinit.ref
busybox/miscutils/: syscalltest-support.c  syscalltest.c
cmake/: busybox.cmake  initrd.cmake  kernel.cmake  utils.cmake
kernel/: 0001-Necessary-changes-to-include-module.patch  kernel_x86-qemu-minimal_defconfig  syscall-tbl_ 6.8.11.patch  syscall-tbl_6.11.9.patch
kernel/e0256-sandboxing/: Makefile  sandboxing.c
kernel/e0256-sandboxing/memgraphlib/: CMakeLists.txt  Makefile  definitions.h  memgraph.c  requirements.txt  utils.h
kernel/e0256-sandboxing/memgraphlib/export/: memgraph.h
kernel/e0256-sandboxing/memgraphlib/tests/: test_memgraph.cc  test_utils.h
kernel/e0256-sandboxing/memgraphlib/tests/test_data/: test-case-1.txt  test-case-2.txt  test-case-3.txt
test/: CMakeLists.txt  helloworld.c  libc_listing.lst  syscall-test.c
test/testcodes/: conditional_ifelse.c  conditional_switchcase.c  helloworld.c  loop_dowhile.c  loop_for.c  loop_while.c  mixed_code.c
